
version 2.3.0:
	http://developer.pidgin.im/query?status=closed&milestone=2.3.0

	libpurple:
	* We now honor a PURPLE_DISABLE_DEPRECATED define to allow plugins to
	  catch deprecated functions earlier rather than later.
	* Thanks to a patch from Intel, the Bonjour prpl now supports file
	  transfers using XEP-0096 and XEP-0065.  This should enable file
	  transfers between libpurple clients, but will not work with iChat
	  or Adium as they use a different file transfer implementation.

	Pidgin:
	* If a plugin says it can't be unloaded, we now display an error and
	  remove the plugin from the list of saved plugins so it won't load
	  at the next startup.  Previously, we were ignoring this case, which
	  could lead to crashes.
	* Mark dialog windows as transient for appropriate parent windows to
	  help window managers do the right thing  (Gabriel Schulhof)
	* Connection errors are now reported in mini-dialogs inside the buddy
	  list, rather than as buttons in the buddy list and with dialog
	  boxes.  If several accounts are disabled when you sign on elsewhere,
	  you can now re-enable them all with a single click.

	Finch:
	* If a plugin says it can't be unloaded, we now display an error and
	  remove the plugin from the list of saved plugins so it won't load
	  at the next startup.  Previously, we were ignoring this case, which
	  could lead to crashes.
	* It's possible to bind key-strokes to specific menuitems in the windows.
	  Read the 'Menus' section in the man-page for details.
	* 'transpose-chars' operation for the entry boxes. The default key-binding
	  is ctrl+t.
	* 'yank' operation for the entry boxes. The default binding is ctrl+y.

version 2.2.3:
	http://developer.pidgin.im/query?status=closed&milestone=2.2.3
		NOTE: Some bugs marked fixed in 2.2.1 may not have been fixed
		      until this release (2.2.3).

	libpurple:
	* Real usernames are now shown in the system log.

	Pidgin:
	* If you alias a buddy to an alias that is already present within